# src/controllers/subcategory.controller.ts
@@ -19,14 +19,17 @@ import { DataResponse } from "../interfaces/DataResponse";
 import ErrorResponseModel from "../interfaces/ErrorResponseModel";
 import Types from "../types";
 import express from "express";
-import { IAppFileService, IProductService } from "../services/interfaces";
-import { IProduct } from "../interfaces/entities";
+import { ISubcategoryService } from "../services/interfaces";
+import { ISubcategory } from "../interfaces/entities";
 import handleAppExceptions from "../utils/handleAppExceptions";
 
-@Route("/products")
-@Tags("Product")
-class ProductsController extends Controller {
-  constructor(@inject(Types.IProductService) private ps: IProductService) {
+@Route("/subcategories")
+@Tags("subcategory")
+class SubcategoryController extends Controller {
+  constructor(
+    @inject(Types.ISubcategoryService)
+    private subcategoryService: ISubcategoryService
+  ) {
     super();
   }
   response: DataResponse = {
@@ -37,8 +40,8 @@ class ProductsController extends Controller {
   @Get("/")
   // @httpGet("/")
   @SuccessResponse("200", "OK")
-  public async getProducts(): Promise<DataResponse> {
-    const results = await this.ps.getProducts();
+  public async getSubcategories(): Promise<DataResponse> {
+    const results = await this.subcategoryService.getSubcategories();
     this.response = {
       statusCode: 200,
       data: results,
@@ -51,9 +54,9 @@ class ProductsController extends Controller {
   // @httpGet("{id}")
   @SuccessResponse("200", "OK")
   @Response<ErrorResponseModel>("404", "Not Found")
-  public async getProduct(id: string): Promise<DataResponse> {
+  public async getSubcategory(id: string): Promise<DataResponse> {
     try {
-      const results = await this.ps.getProduct(id);
+      const results = await this.subcategoryService.getSubcategory(id);
 
       if (results.length > 0) {
         return {
@@ -68,16 +71,7 @@ class ProductsController extends Controller {
       }
     } catch (error) {
       console.log(error.message);
-      if (error.message.search("Cast") != -1) {
-        return {
-          statusCode: 404,
-          message: "Not Found",
-        };
-      }
-      return {
-        statusCode: 500,
-        message: error.message,
-      };
+      return handleAppExceptions(error);
     }
   }
 
@@ -85,17 +79,14 @@ class ProductsController extends Controller {
   @SuccessResponse("201", "Created")
   @Response<ErrorResponseModel>("400", "Bad Data")
   @Response<ErrorResponseModel>("409", "product already exists")
-  public async createProduct(
-    @Body() product: IProduct,
-    @Request() req: express.Request,
-    @Request() res: express.Response
+  public async createSubcategory(
+    @Body() subcategory: ISubcategory
   ): Promise<DataResponse> {
     // await this.handleFile(req);
+    console.log(subcategory);
     try {
-      const results = await this.ps.createProduct(
-        product,
-        req.files,
-        res.locals.email
+      const results = await this.subcategoryService.createSubcategory(
+        subcategory
       );
 
       return {
@@ -111,18 +102,14 @@ class ProductsController extends Controller {
   @SuccessResponse("204", "Updated")
   @Response<ErrorResponseModel>("400", "Bad Data")
   @Response<ErrorResponseModel>("404", "Not Found")
-  public async updateProduct(
+  public async updateSubcategory(
     @Path() id: string,
-    @Body() product: IProduct,
-    @Request() req: express.Request
+    @Body() subcategory: ISubcategory
   ): Promise<DataResponse> {
-    const email = "";
     try {
-      const results = await this.ps.updateProduct(
+      const results = await this.subcategoryService.updateSubcategory(
         id,
-        req.files,
-        product as any,
-        email
+        subcategory
       );
 
       if (results == null) {
@@ -137,31 +124,9 @@ class ProductsController extends Controller {
       };
       return this.response;
     } catch (error) {
-      if (error.message.search("Cast") != -1) {
-        return {
-          statusCode: 404,
-          message: "Not Found",
-        };
-      }
-
-      return {
-        statusCode: 500,
-        message: "Something happened",
-      };
+      return handleAppExceptions(error);
     }
-  }
-
-  private async handleFile(request: express.Request): Promise<void> {
-    const multerSingle = multer().single("images");
-    return new Promise((resolve, reject) => {
-      multerSingle(request, undefined, async (error) => {
-        if (error) {
-          reject(error);
-        }
-        resolve();
-      });
-    });
   }
 }
 
-export default ProductsController;
+export default SubcategoryController;
