# src/routes/subcategory.route.ts
@@ -1,25 +1,27 @@
 import express, { Request, Response } from "express";
-import CategoriesController from "../controllers/category.controller";
 import { DataResponse } from "../interfaces/DataResponse";
-import CategoryService from "../services/category.service";
 import { handleResponse } from "../utils/handleResponse";
 import { container } from "../containerDI";
 import Types from "../types";
 import cacheData from "../utils/cache-data";
-import ICategory from "../interfaces/entities/ICategory";
+import SubcategoryController from "../controllers/subcategory.controller";
+import { SubcategoryService } from "../services";
 const router = express.Router();
-const categoryService = container.get<CategoryService>(Types.ICategoryService);
 
-const categoryController = new CategoriesController(categoryService);
+const subcategoryService = container.get<SubcategoryService>(
+  Types.ISubcategoryService
+);
+
+const subcategoryController = new SubcategoryController(subcategoryService);
 
 router.get("/", async (req: Request, res: Response) => {
-  const response: DataResponse = await categoryController.getCategories();
+  const response: DataResponse = await subcategoryController.getSubcategories();
   cacheData(req.originalUrl, response);
   return handleResponse(res, response);
 });
 
 router.get("/:id", async (req: Request, res: Response) => {
-  const response: DataResponse = await categoryController.getCategory(
+  const response: DataResponse = await subcategoryController.getSubcategory(
     req.params.id
   );
 
@@ -27,7 +29,7 @@ router.get("/:id", async (req: Request, res: Response) => {
 });
 
 router.post("/", async (req: Request, res: Response) => {
-  const response: DataResponse = await categoryController.createCategory(
+  const response: DataResponse = await subcategoryController.createSubcategory(
     req.body
   );
 
@@ -35,7 +37,7 @@ router.post("/", async (req: Request, res: Response) => {
 });
 
 router.put("/:id", async (req: Request, res: Response) => {
-  const response: DataResponse = await categoryController.updateCategory(
+  const response: DataResponse = await subcategoryController.updateSubcategory(
     req.params.id,
     req.body
   );
